--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### VAADIN ###
+!**/frontent/
+*.json
+*.ts
+
 ### STS ###
 .apt_generated
 .classpath
