--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,11 @@ build/
 
 ### VAADIN ###
 frontend/
-.json
-.ts
+package.json
+tsconfig.json
+types.d.ts
+vite.config.ts
+vite.generated.ts
 
 ### STS ###
 .apt_generated
