--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
 	implementation 'com.vaadin:vaadin-core'
 	implementation 'org.flywaydb:flyway-core:9.3.0'
