--- a/package.json
+++ b/package.json
@@ -2,23 +2,24 @@
   "name": "no-name",
   "license": "UNLICENSED",
   "dependencies": {
-    "@polymer/iron-icon": "3.0.1",
-    "@polymer/iron-iconset-svg": "3.0.1",
-    "@polymer/iron-list": "3.1.0",
-    "@polymer/iron-meta": "3.0.1",
-    "@polymer/iron-resizable-behavior": "3.0.1",
-    "@polymer/polymer": "3.5.1",
-    "@vaadin-component-factory/vcf-nav": "1.0.6",
-    "@vaadin/accordion": "23.2.0",
-    "@vaadin/app-layout": "23.2.0",
-    "@vaadin/avatar": "23.2.0",
-    "@vaadin/avatar-group": "23.2.0",
-    "@vaadin/bundles": "23.2.0",
-    "@vaadin/button": "23.2.0",
-    "@vaadin/checkbox": "23.2.0",
-    "@vaadin/checkbox-group": "23.2.0",
-    "@vaadin/combo-box": "23.2.0",
-    "@vaadin/common-frontend": "0.0.17",
+    "@polymer/iron-icon" : "3.0.1",
+    "@polymer/iron-iconset-svg" : "3.0.1",
+    "@polymer/iron-list" : "3.1.0",
+    "@polymer/iron-meta" : "3.0.1",
+    "@polymer/iron-resizable-behavior" : "3.0.1",
+    "@polymer/polymer" : "3.5.1",
+    "@vaadin-component-factory/vcf-nav" : "1.0.6",
+    "@vaadin-component-factory/vcf-toggle-button" : "1.0.3",
+    "@vaadin/accordion" : "23.2.0",
+    "@vaadin/app-layout" : "23.2.0",
+    "@vaadin/avatar" : "23.2.0",
+    "@vaadin/avatar-group" : "23.2.0",
+    "@vaadin/bundles" : "23.2.0",
+    "@vaadin/button" : "23.2.0",
+    "@vaadin/checkbox" : "23.2.0",
+    "@vaadin/checkbox-group" : "23.2.0",
+    "@vaadin/combo-box" : "23.2.0",
+    "@vaadin/common-frontend" : "0.0.17",
     "@vaadin/component-base": "23.2.0",
     "@vaadin/confirm-dialog": "23.2.0",
     "@vaadin/context-menu": "23.2.0",
@@ -126,23 +127,24 @@
   },
   "vaadin": {
     "dependencies": {
-      "@polymer/iron-icon": "3.0.1",
-      "@polymer/iron-iconset-svg": "3.0.1",
-      "@polymer/iron-list": "3.1.0",
-      "@polymer/iron-meta": "3.0.1",
-      "@polymer/iron-resizable-behavior": "3.0.1",
-      "@polymer/polymer": "3.5.1",
-      "@vaadin-component-factory/vcf-nav": "1.0.6",
-      "@vaadin/accordion": "23.2.0",
-      "@vaadin/app-layout": "23.2.0",
-      "@vaadin/avatar": "23.2.0",
-      "@vaadin/avatar-group": "23.2.0",
-      "@vaadin/bundles": "23.2.0",
-      "@vaadin/button": "23.2.0",
-      "@vaadin/checkbox": "23.2.0",
-      "@vaadin/checkbox-group": "23.2.0",
-      "@vaadin/combo-box": "23.2.0",
-      "@vaadin/common-frontend": "0.0.17",
+      "@polymer/iron-icon" : "3.0.1",
+      "@polymer/iron-iconset-svg" : "3.0.1",
+      "@polymer/iron-list" : "3.1.0",
+      "@polymer/iron-meta" : "3.0.1",
+      "@polymer/iron-resizable-behavior" : "3.0.1",
+      "@polymer/polymer" : "3.5.1",
+      "@vaadin-component-factory/vcf-nav" : "1.0.6",
+      "@vaadin-component-factory/vcf-toggle-button" : "1.0.3",
+      "@vaadin/accordion" : "23.2.0",
+      "@vaadin/app-layout" : "23.2.0",
+      "@vaadin/avatar" : "23.2.0",
+      "@vaadin/avatar-group" : "23.2.0",
+      "@vaadin/bundles" : "23.2.0",
+      "@vaadin/button" : "23.2.0",
+      "@vaadin/checkbox" : "23.2.0",
+      "@vaadin/checkbox-group" : "23.2.0",
+      "@vaadin/combo-box" : "23.2.0",
+      "@vaadin/common-frontend" : "0.0.17",
       "@vaadin/component-base": "23.2.0",
       "@vaadin/confirm-dialog": "23.2.0",
       "@vaadin/context-menu": "23.2.0",
@@ -247,7 +249,7 @@
       "workbox-core": "6.5.0",
       "workbox-precaching": "6.5.0"
     },
-    "hash": "0053dbb9619f6c4ad5b57c48575c155fdc566fb960d654a9722f5b556fa30621"
+    "hash" : "849fd26ee6c52cc0c591243928d61a3d0cfca33333afc4b562a23589bd29ae3d"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -344,16 +346,17 @@
     "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
     "@vaadin/vaadin-time-picker": "$@vaadin/vaadin-time-picker",
     "@vaadin/vaadin-upload": "$@vaadin/vaadin-upload",
-    "@vaadin/vaadin-usage-statistics": "$@vaadin/vaadin-usage-statistics",
-    "@vaadin/vaadin-virtual-list": "$@vaadin/vaadin-virtual-list",
-    "@vaadin/vertical-layout": "$@vaadin/vertical-layout",
-    "@vaadin/virtual-list": "$@vaadin/virtual-list",
-    "@vaadin/common-frontend": "$@vaadin/common-frontend",
-    "construct-style-sheets-polyfill": "$construct-style-sheets-polyfill",
-    "lit": "$lit",
-    "@polymer/polymer": "$@polymer/polymer",
-    "date-fns": "$date-fns",
-    "@vaadin-component-factory/vcf-nav": "$@vaadin-component-factory/vcf-nav",
-    "line-awesome": "$line-awesome"
+    "@vaadin/vaadin-usage-statistics" : "$@vaadin/vaadin-usage-statistics",
+    "@vaadin/vaadin-virtual-list" : "$@vaadin/vaadin-virtual-list",
+    "@vaadin/vertical-layout" : "$@vaadin/vertical-layout",
+    "@vaadin/virtual-list" : "$@vaadin/virtual-list",
+    "@vaadin/common-frontend" : "$@vaadin/common-frontend",
+    "construct-style-sheets-polyfill" : "$construct-style-sheets-polyfill",
+    "lit" : "$lit",
+    "@polymer/polymer" : "$@polymer/polymer",
+    "date-fns" : "$date-fns",
+    "@vaadin-component-factory/vcf-nav" : "$@vaadin-component-factory/vcf-nav",
+    "line-awesome" : "$line-awesome",
+    "@vaadin-component-factory/vcf-toggle-button" : "$@vaadin-component-factory/vcf-toggle-button"
   }
 }
