--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ flyway:
 
 spring:
   datasource:
-    url: jdbc:postgresql://10.12.0.1:5435/hypnobook
+    url: jdbc:postgresql://localhost:5435/hypnobook
     password: appuser
     username: appuser
     ucm:
