--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 	implementation 'com.vaadin:vaadin-spring-boot-starter'
 	implementation 'com.vaadin:vaadin-core'
 	implementation 'org.flywaydb:flyway-core:9.3.0'
+	implementation 'com.itextpdf:itextpdf:5.5.13.3'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'org.postgresql:postgresql'
