--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@vaadin/checkbox-group" : "23.2.0",
     "@vaadin/combo-box" : "23.2.0",
     "@vaadin/common-frontend" : "0.0.17",
-    "@vaadin/component-base": "23.2.0",
-    "@vaadin/confirm-dialog": "23.2.0",
-    "@vaadin/context-menu": "23.2.0",
-    "@vaadin/custom-field": "23.2.0",
-    "@vaadin/date-picker": "23.2.0",
-    "@vaadin/date-time-picker": "23.2.0",
-    "@vaadin/details": "23.2.0",
-    "@vaadin/dialog": "23.2.0",
-    "@vaadin/email-field": "23.2.0",
-    "@vaadin/field-base": "23.2.0",
+    "@vaadin/component-base" : "23.2.0",
+    "@vaadin/confirm-dialog" : "23.2.0",
+    "@vaadin/context-menu" : "23.2.0",
+    "@vaadin/custom-field" : "23.2.0",
+    "@vaadin/date-picker" : "23.2.0",
+    "@vaadin/date-time-picker" : "23.2.0",
+    "@vaadin/details" : "23.2.0",
+    "@vaadin/dialog" : "23.2.0",
+    "@vaadin/email-field" : "23.2.0",
+    "@vaadin/field-base" : "23.2.0",
     "@vaadin/field-highlighter": "23.2.0",
     "@vaadin/flow-frontend": "./build/flow-frontend",
     "@vaadin/form-layout": "23.2.0",
@@ -95,20 +95,22 @@
     "@vaadin/vaadin-radio-button": "23.2.0",
     "@vaadin/vaadin-select": "23.2.0",
     "@vaadin/vaadin-split-layout": "23.2.0",
-    "@vaadin/vaadin-tabs": "23.2.0",
-    "@vaadin/vaadin-template-renderer": "23.2.0",
-    "@vaadin/vaadin-text-field": "23.2.0",
-    "@vaadin/vaadin-themable-mixin": "23.2.0",
-    "@vaadin/vaadin-time-picker": "23.2.0",
-    "@vaadin/vaadin-upload": "23.2.0",
-    "@vaadin/vaadin-usage-statistics": "2.1.2",
-    "@vaadin/vaadin-virtual-list": "23.2.0",
-    "@vaadin/vertical-layout": "23.2.0",
-    "@vaadin/virtual-list": "23.2.0",
-    "construct-style-sheets-polyfill": "3.1.0",
-    "date-fns": "2.28.0",
-    "line-awesome": "1.3.0",
-    "lit": "2.3.0"
+    "@vaadin/vaadin-tabs" : "23.2.0",
+    "@vaadin/vaadin-template-renderer" : "23.2.0",
+    "@vaadin/vaadin-text-field" : "23.2.0",
+    "@vaadin/vaadin-themable-mixin" : "23.2.0",
+    "@vaadin/vaadin-time-picker" : "23.2.0",
+    "@vaadin/vaadin-upload" : "23.2.0",
+    "@vaadin/vaadin-usage-statistics" : "2.1.2",
+    "@vaadin/vaadin-virtual-list" : "23.2.0",
+    "@vaadin/vertical-layout" : "23.2.0",
+    "@vaadin/virtual-list" : "23.2.0",
+    "apexcharts" : "3.30.0",
+    "construct-style-sheets-polyfill" : "3.1.0",
+    "date-fns" : "2.28.0",
+    "line-awesome" : "1.3.0",
+    "lit" : "2.3.0",
+    "onecolor" : "3.1.0"
   },
   "devDependencies": {
     "@rollup/plugin-replace": "3.1.0",
@@ -145,16 +147,16 @@
       "@vaadin/checkbox-group" : "23.2.0",
       "@vaadin/combo-box" : "23.2.0",
       "@vaadin/common-frontend" : "0.0.17",
-      "@vaadin/component-base": "23.2.0",
-      "@vaadin/confirm-dialog": "23.2.0",
-      "@vaadin/context-menu": "23.2.0",
-      "@vaadin/custom-field": "23.2.0",
-      "@vaadin/date-picker": "23.2.0",
-      "@vaadin/date-time-picker": "23.2.0",
-      "@vaadin/details": "23.2.0",
-      "@vaadin/dialog": "23.2.0",
-      "@vaadin/email-field": "23.2.0",
-      "@vaadin/field-base": "23.2.0",
+      "@vaadin/component-base" : "23.2.0",
+      "@vaadin/confirm-dialog" : "23.2.0",
+      "@vaadin/context-menu" : "23.2.0",
+      "@vaadin/custom-field" : "23.2.0",
+      "@vaadin/date-picker" : "23.2.0",
+      "@vaadin/date-time-picker" : "23.2.0",
+      "@vaadin/details" : "23.2.0",
+      "@vaadin/dialog" : "23.2.0",
+      "@vaadin/email-field" : "23.2.0",
+      "@vaadin/field-base" : "23.2.0",
       "@vaadin/field-highlighter": "23.2.0",
       "@vaadin/form-layout": "23.2.0",
       "@vaadin/grid": "23.2.0",
@@ -219,20 +221,22 @@
       "@vaadin/vaadin-radio-button": "23.2.0",
       "@vaadin/vaadin-select": "23.2.0",
       "@vaadin/vaadin-split-layout": "23.2.0",
-      "@vaadin/vaadin-tabs": "23.2.0",
-      "@vaadin/vaadin-template-renderer": "23.2.0",
-      "@vaadin/vaadin-text-field": "23.2.0",
-      "@vaadin/vaadin-themable-mixin": "23.2.0",
-      "@vaadin/vaadin-time-picker": "23.2.0",
-      "@vaadin/vaadin-upload": "23.2.0",
-      "@vaadin/vaadin-usage-statistics": "2.1.2",
-      "@vaadin/vaadin-virtual-list": "23.2.0",
-      "@vaadin/vertical-layout": "23.2.0",
-      "@vaadin/virtual-list": "23.2.0",
-      "construct-style-sheets-polyfill": "3.1.0",
-      "date-fns": "2.28.0",
-      "line-awesome": "1.3.0",
-      "lit": "2.3.0"
+      "@vaadin/vaadin-tabs" : "23.2.0",
+      "@vaadin/vaadin-template-renderer" : "23.2.0",
+      "@vaadin/vaadin-text-field" : "23.2.0",
+      "@vaadin/vaadin-themable-mixin" : "23.2.0",
+      "@vaadin/vaadin-time-picker" : "23.2.0",
+      "@vaadin/vaadin-upload" : "23.2.0",
+      "@vaadin/vaadin-usage-statistics" : "2.1.2",
+      "@vaadin/vaadin-virtual-list" : "23.2.0",
+      "@vaadin/vertical-layout" : "23.2.0",
+      "@vaadin/virtual-list" : "23.2.0",
+      "apexcharts" : "3.30.0",
+      "construct-style-sheets-polyfill" : "3.1.0",
+      "date-fns" : "2.28.0",
+      "line-awesome" : "1.3.0",
+      "lit" : "2.3.0",
+      "onecolor" : "3.1.0"
     },
     "devDependencies": {
       "@rollup/plugin-replace": "3.1.0",
@@ -249,7 +253,7 @@
       "workbox-core": "6.5.0",
       "workbox-precaching": "6.5.0"
     },
-    "hash" : "849fd26ee6c52cc0c591243928d61a3d0cfca33333afc4b562a23589bd29ae3d"
+    "hash" : "0971f965aefa30fa80e2cb91c72535356ad087bbc9a1e6bc484fcdf5de44c61c"
   },
   "overrides": {
     "@vaadin/bundles": "$@vaadin/bundles",
@@ -336,16 +340,16 @@
     "@vaadin/vaadin-ordered-layout": "$@vaadin/vaadin-ordered-layout",
     "@vaadin/vaadin-overlay": "$@vaadin/vaadin-overlay",
     "@vaadin/vaadin-progress-bar": "$@vaadin/vaadin-progress-bar",
-    "@vaadin/vaadin-radio-button": "$@vaadin/vaadin-radio-button",
-    "@vaadin/router": "$@vaadin/router",
-    "@vaadin/vaadin-select": "$@vaadin/vaadin-select",
-    "@vaadin/vaadin-split-layout": "$@vaadin/vaadin-split-layout",
-    "@vaadin/vaadin-tabs": "$@vaadin/vaadin-tabs",
-    "@vaadin/vaadin-template-renderer": "$@vaadin/vaadin-template-renderer",
-    "@vaadin/vaadin-text-field": "$@vaadin/vaadin-text-field",
-    "@vaadin/vaadin-themable-mixin": "$@vaadin/vaadin-themable-mixin",
-    "@vaadin/vaadin-time-picker": "$@vaadin/vaadin-time-picker",
-    "@vaadin/vaadin-upload": "$@vaadin/vaadin-upload",
+    "@vaadin/vaadin-radio-button" : "$@vaadin/vaadin-radio-button",
+    "@vaadin/router" : "$@vaadin/router",
+    "@vaadin/vaadin-select" : "$@vaadin/vaadin-select",
+    "@vaadin/vaadin-split-layout" : "$@vaadin/vaadin-split-layout",
+    "@vaadin/vaadin-tabs" : "$@vaadin/vaadin-tabs",
+    "@vaadin/vaadin-template-renderer" : "$@vaadin/vaadin-template-renderer",
+    "@vaadin/vaadin-text-field" : "$@vaadin/vaadin-text-field",
+    "@vaadin/vaadin-themable-mixin" : "$@vaadin/vaadin-themable-mixin",
+    "@vaadin/vaadin-time-picker" : "$@vaadin/vaadin-time-picker",
+    "@vaadin/vaadin-upload" : "$@vaadin/vaadin-upload",
     "@vaadin/vaadin-usage-statistics" : "$@vaadin/vaadin-usage-statistics",
     "@vaadin/vaadin-virtual-list" : "$@vaadin/vaadin-virtual-list",
     "@vaadin/vertical-layout" : "$@vaadin/vertical-layout",
@@ -357,6 +361,8 @@
     "date-fns" : "$date-fns",
     "@vaadin-component-factory/vcf-nav" : "$@vaadin-component-factory/vcf-nav",
     "line-awesome" : "$line-awesome",
-    "@vaadin-component-factory/vcf-toggle-button" : "$@vaadin-component-factory/vcf-toggle-button"
+    "@vaadin-component-factory/vcf-toggle-button" : "$@vaadin-component-factory/vcf-toggle-button",
+    "apexcharts" : "$apexcharts",
+    "onecolor" : "$onecolor"
   }
 }
