--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ plugins {
    id 'org.springframework.boot' version '2.7.3'
    id 'io.spring.dependency-management' version '1.0.13.RELEASE'
    id 'com.vaadin' version '23.2.0'
-   id "org.flywaydb.flyway" version "9.3.0"
+   id 'org.flywaydb.flyway' version "9.3.0"
    id 'java'
+   id 'idea'
+   id 'maven-publish'
 }
 
 group = 'net.steinerworld'
@@ -72,5 +74,27 @@ jar {
    manifest {
       attributes("Implementation-Title": "Hypno",
             "Implementation-Version": archiveVersion)
+   }
+}
+
+
+publishing {
+   publications {
+      maven(MavenPublication) {
+         groupId group
+         from components.java
+         artifact("$buildDir/libs/hypnobook-0.9.0.jar")
+      }
+   }
+
+   repositories {
+      maven {
+         url 'https://maven.steinerworld.net/repository/maven-releases/'
+
+         credentials {
+            username System.getenv('ARCHIVA_USR')
+            password System.getenv('ARCHIVA_PSW')
+         }
+      }
    }
 }
