--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 MAJOR_VERSION=0
 MINOR_VERSION=9
 vaadinAddonsUrl=https://maven.vaadin.com/vaadin-addons
+dockerHubRepository=https://index.docker.io/v1/
