--- a/build.gradle
+++ b/build.gradle
@@ -141,9 +141,12 @@ docker {
          productionMode = true
       }
       registryCredentials {
-         url = "${dockerHubRepository}"
-         username = System.getenv('DOCKER_USR')
-         password = System.getenv('DOCKER_PSW')
+//         url = "${dockerHubRepository}"
+//         username = System.getenv('DOCKER_USR')
+//         password = System.getenv('DOCKER_PSW')
+         url = 'https://index.docker.io/v1/'
+         username = 'steinerworld'
+         password = 'i009Grande'
          email = 'michael@steinerworld.net'
       }
    }
