--- a/build.gradle
+++ b/build.gradle
@@ -122,7 +122,7 @@ task updateVersion {
       println '********************************************'
       println '********************************************'
       println 'please check the \'gradle.properties\' file!'
-      println 'New version is \'' + major + '.' + minor + '.' patch +'\''
+      println 'New version is ' + major + '.' + minor + '.' patch
       println '********************************************'
       println '********************************************'
    } else {
