--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 #Tue Nov 01 23:59:36 CET 2022
-dockerHubRepository=https\://index.docker.io/v1/
+dockerHubRepository=https://index.docker.io/v1/
 MAJOR_VERSION=0
 MINOR_VERSION=9
-vaadinAddonsUrl=https\://maven.vaadin.com/vaadin-addons
+vaadinAddonsUrl=https://maven.vaadin.com/vaadin-addons
 PATCH_VERSION=5
