--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ MAJOR_VERSION=1
 MINOR_VERSION=0
 dockerHubRepository=https://index.docker.io/v1/
 vaadinAddonsUrl=https://maven.vaadin.com/vaadin-addons
+vaadinVersion=23.2.8
