Diese Kinderkrankheiten ausgemerzt

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'com.vaadin:vaadin-spring-boot-starter'
    implementation 'com.vaadin:vaadin-core'
-   implementation 'org.flywaydb:flyway-core:9.8.1'
+   implementation 'org.flywaydb:flyway-core:9.8.2'
    implementation 'com.itextpdf:itextpdf:5.5.13.3'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -84,7 +84,7 @@ dependencyManagement {
 }
 
 vaadin {
-   productionMode = false
+   productionMode = true
 }
 
 flyway {
@@ -155,9 +155,6 @@ docker {
       ports = [9090, 8080]
       images = ["steinerworld/hypnobook:${version}"]
       jvmArgs = ['-Dspring.profiles.active=production', '-Xmx2048m']
-//      vaadin {
-//         productionMode = false
-//      }
       registryCredentials {
          url = '${dockerHubRepository}'
          username = System.getenv('DOCKER_USR')
